// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FbxSelect snapshots renders the default correctly 1`] = `
<div><select name="select" class="fbx-select" aria-required="false" aria-invalid="false">
    <option>Default</option>
    <option value="Option 1">Option 1</option>
    <option value="Option 2">Option 2</option>
  </select>
  <!---->
</div>
`;

exports[`FbxSelect snapshots renders validations correctly 1`] = `
<div><select name="select" class="fbx-select invalid" aria-required="false" aria-invalid="false">
    <option>Default</option>
    <option value="Option 1">Option 1</option>
    <option value="Option 2">Option 2</option>
  </select>
  <fbx-validation-message-stub class="validation-message">This field is required</fbx-validation-message-stub>
</div>
`;
